# 3D-reconstruction-with-RGB-D

./: README.md  parameters.txt  result_after.g2o  result_before.g2o
onlineData/: changeParameters.txt
src/: CMakeLists.txt  slam.cpp  slamBase.cpp
